# ai-job-bot

./: .env.example  .gitignore  README.md  docker-compose.yml  jobs.csv  jobs_output.json  pyproject.toml  requirements.txt  scrape_jobs.py
backend/: CRON_SETUP.md  README.md  alembic.ini  jobs_output.json  pyproject.toml  scrape_jobs.bat  scrape_jobs.ps1  scrape_jobs.sh
backend/alembic/: env.py
backend/alembic/versions/: 2025_11_11_0913-fea0bcc1a1eb_initial_migration_with_companies_and_.py  2025_11_14_0728-360fe7900b74_add_llm_parsed_job_fields.py  2025_11_15_1200-5a6d8c9f3b21_add_company_description_insights.py  2025_11_17_1815-add_applicants_count_to_jobs.py  2025_11_20_0000-add_users_table.py  2025_11_20_1801-add_saved_jobs_table.py  2025_11_24_1200-add_blocked_companies_table.py  2025_11_25_0000-add_resume_json_to_users.py  2025_11_26_0000-add_tailored_resumes_table.py  2025_12_04_1315-cad04a32a0ba_add_pdf_related_fields.py  2025_12_22_1504-71ac71411853_increase_varchar_lengths_in_jobs.py  2025_12_23_1200-add_dspy_job_fields.py  2026_01_13_0943-add_seen_jobs_table.py
backend/app/: auth.py  config.py  db.py  logging_config.py  main.py
backend/app/api/: auth.py  blocked_companies.py  jobs.py  profile.py  saved_jobs.py  seen_jobs.py  tailored_resumes.py
backend/app/models/: __init__.py  blocked_company.py  company.py  job.py  saved_job.py  seen_job.py  tailored_resume.py  user.py
backend/app/schemas/: __init__.py  blocked_company.py  company.py  job.py  saved_job.py  seen_job.py  structured_job.py  tailored_resume.py  user.py
backend/cli/: __init__.py  main.py  register.py  scrape.py  utils.py
backend/jobspy/: model.py
backend/test-scripts/: check-available-models.py  job_parser.py  scrape_jobs_from_linkedin.py  test-ollama-inference.py  test-ollama-simple.py
backend/tests/: test_company_description_parser.py
(+45 files in other folders)
