[project]
name = "job-apply-assistant-backend"
version = "0.1.0"
description = "FastAPI backend service for the Job Apply Assistant Bot"
authors = []
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "psycopg2-binary",
    "alembic",
    "typer",
    "rich",
    "requests",
    "python-jobspy>=1.1.79",
    "pydantic-settings",
    "python-dotenv",
    "pandas",
    "ipykernel>=7.1.0",
    "loguru",
    "ollama>=0.6.0",
]

[project.scripts]
jobbot = "cli.main:app"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
