[project]
name = "job-apply-assistant-backend"
version = "0.1.0"
description = "FastAPI backend service for the Job Apply Assistant Bot"
authors = []
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "psycopg2-binary",
    "alembic",
    "typer",
    "rich",
    "requests<3.0.0,>=2.31.0",
    "pydantic-settings",
    "python-dotenv",
    "pandas<3.0.0,>=2.1.0",
    "ipykernel>=7.1.0",
    "loguru",
    "ollama>=0.6.0",
    "beautifulsoup4<5.0.0,>=4.12.2",
    "NUMPY==1.26.3",
    "pydantic<3.0.0,>=2.3.0",
    "tls-client<2.0.0,>=1.0.1",
    "markdownify<2.0.0,>=1.1.0",
    "regex<2025.0.0,>=2024.4.28",
    "nvitop>=1.6.0",
    "python-jose[cryptography]",
    "passlib[argon2]",
    "python-multipart",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    "dspy-ai",
]

[project.scripts]
jobbot = "cli.main"

[project.optional-dependencies]
dev = [
    "jupyter<2.0.0,>=1.0.0",
    "black",
    "pre-commit",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
